src/test/ui/platform-intrinsic-params.stderr
error[E0444]: platform-specific intrinsic has invalid number of arguments: found 0, expected 1
  --> $DIR/platform-intrinsic-params.rs:14:5
   |
LL |     fn aarch64_vld2_s8() -> i32; //~ERROR found 0, expected 1
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0444`.
